Synching menuitem block with master.

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -514,6 +514,117 @@ label.add.to.roster = Benutzer zur Kontaktliste hinzufügen
 label.audio.device = &Audiogerät
 label.video.device = &Videogerät
 
+menuitem.about = Über
+menuitem.actions = Aktionen
+menuitem.bookmarks = Lesezeichen
+menuitem.add = Hinzufügen
+menuitem.add.as.contact = Als Kontakt hinzufügen
+menuitem.add.contact = Kontakt hinzufügen
+menuitem.add.contact.group = Kontaktgruppe hinzufügen
+menuitem.add.groupchat.myname = Meinen &Namen hervorheben, wenn ihn jemand schreibt
+menuitem.add.groupchat.mytext = Meinen &Text hervorheben, wenn ich etwas schreibe
+menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
+menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den &Raum betritt oder verlässt 
+menuitem.add.groupchat.showrolesinsteadofstatus = Zeige &Chatrecht-Icons anstelle von Statusicons
+menuitem.add.groupchat.auto.accept.invite = &Konferenzeinladungen automatisch aktzeptieren
+menuitem.add.groupchat.random.colors = Zeige Namen mit zufälligen &Farben
+menuitem.always.on.top = Immer im Vordergrund
+menuitem.alert.when.online = Benachrichtigen wenn Teilnehmer verfügbar
+menuitem.ban = Verbannen
+menuitem.ban.user = Teilnehmer sperren
+menuitem.block.user = Teilnehmer blockieren
+menuitem.broadcast.to.group = Rundnachricht an Gruppe
+menuitem.browse.service = Services anzeigen
+menuitem.change.nickname = Angezeigten Namen ändern
+menuitem.change.subject = Konferenzthema ändern
+menuitem.chat = Chat
+menuitem.check.for.updates = Ist eine neuere &Version verfügbar?
+menuitem.connect = File
+menuitem.contacts = Kontakte
+menuitem.copy.to = Kopieren nach
+menuitem.delete = Löschen
+menuitem.delete.login.information = Anmeldeinformationen löschen
+menuitem.destroy.room = Raum löschen
+menuitem.dial = Wählen
+menuitem.edit = Ändern
+menuitem.edit.my.profile = &Profil ändern...
+menuitem.edit.status.message = Status Nachrichten ändern...
+menuitem.enter.login.information = Anmeldeinformationen eingeben
+menuitem.exit = Beenden
+menuitem.affiliation = Raumassoziierung
+menuitem.grant.moderator = Moderatorenstatus geben
+menuitem.grant.member = Mitgliedsstatus geben
+menuitem.grant.admin = Adminstatus geben
+menuitem.grant.owner = Besitzerstatus geben
+menuitem.grant.voice = Schreibrecht geben
+menuitem.help = &Hilfe
+menuitem.hide = Minimieren
+menuitem.invite.group.to.conference = Gruppe zu einer Konferenz einladen
+menuitem.invite.users = Teilnehmer einladen
+menuitem.join.on.startup = Beim Starten beitreten
+menuitem.join.room = Raum beitreten
+menuitem.kick.user = Teilnehmer rauswerfen
+menuitem.languages = Sprachen
+menuitem.logout.no.status = Ausloggen
+menuitem.logout.with.status = Ausloggen mit Nachricht
+menuitem.lookup.profile = &Profil suchen...
+menuitem.move.to = Verschieben nach
+menuitem.online.help = Online-Hilfe
+menuitem.open = Öffnen
+menuitem.open.with = Öffnen mit...
+menuitem.plugins = Plugins
+menuitem.preferences = Einstellungen
+menuitem.remove = Entfernen
+menuitem.remove.alert.when.online = Benachrichtigung entfernen
+menuitem.remove.bookmark = Lesezeichen entfernen
+menuitem.remove.from.group = Aus dieser Gruppe entfernen
+menuitem.remove.from.roster = Von Kontaktliste entfernen
+menuitem.block.contact = Kontakt auf akueller Liste blockieren
+menuitem.unblock.contact = Blockierung eines Kontaktes aufheben
+menuitem.remove.service = Service entfernen
+menuitem.rename = Umbenennen
+menuitem.revoke.moderator = Moderatorenstatus widerrufen
+menuitem.revoke.voice = Schreibrecht entziehen
+menuitem.revoke.member = Mitgliedsstatus widerrufen
+menuitem.revoke.admin = Adminstatus widerrufen
+menuitem.revoke.owner = Besitzerstatus widerrufen
+menuitem.save = Speichern
+menuitem.save.as = Speichern als...
+menuitem.send.a.file = Datei senden
+menuitem.send.a.message = Nachricht senden...
+menuitem.set.status.message = Status Nachricht setzen...
+menuitem.show.empty.groups = Leere Gruppen anzeigen
+menuitem.show.offline.group = Offline User gruppieren
+menuitem.show.traffic = Verbindungsdaten
+menuitem.sign.in = Einloggen 
+menuitem.sign.in.at.login = Einloggen während des Anmeldens 
+menuitem.sign.out = Ausloggen
+menuitem.start.a.chat = Chat starten
+menuitem.start.a.conference = Eine Konferenz starten...
+menuitem.status = Status
+menuitem.subscribe.to = Kontaktanfrage senden
+menuitem.unban = Teilnehmer entsperren
+menuitem.unblock.user = Blockierung auf aktueller Liste aufheben
+menuitem.user.guide = Benutzerhandbuch
+menuitem.view.client.version = Programm Version anzeigen
+menuitem.view.contact.history = Kontaktverlauf anzeigen
+menuitem.view.downloads = Downloads anzeigen
+menuitem.view.last.activity = Letzte Aktivität sehen
+menuitem.view.logs = Logs anzeigen
+menuitem.view.profile = Profil anzeigen
+menuitem.view.room.info = Rauminformationen anzeigen
+menuitem.voice = Schreibrecht
+menuitem.show.offline.users = Zeige Offline User
+menuitem.show.contact.statusmessage = Statusnachricht anzeigen
+menuitem.bookmark.room = Raum als Lesezeichen setzen
+menuitem.refresh = Aktualisieren
+menuitem.create.room = Raum erstellen oder beitreten
+menuitem.expand.all.groups = Öffne alle Gruppen
+menuitem.collapse.all.groups = Schließe alle Gruppen
+menuitem.inivite.again = Nochmals einladen
+menuitem.chatframe.option = Einstellungen
+menuitem.add.groupchat.invitetobookmark = Automatically invite users to bookmarked room
+
 message.username.error = Wählen Sie einen Benutzernamen für diesem Account.
 message.password.error = Wähle Sie Passwort für diesem Account.
 message.confirmation.password.error = Wiederholen Sie das Passwort.
@@ -848,111 +959,6 @@ title.error.delete.file = Datei konnte nicht gelöscht werden!
 title.error.couldnt.open.file = Datei konnte nicht geöffnet werden! Eventuell Dateityp unbekannt!
 title.bookmarks = Lesezeichen
 title.task.notification = Task notification
-menuitem.contacts = Kontakte
-menuitem.actions = Aktionen
-menuitem.bookmarks = Lesezeichen
-menuitem.exit = Beenden
-menuitem.plugins = Plugins
-menuitem.logout.no.status = Ausloggen
-menuitem.logout.with.status = Ausloggen mit Nachricht
-menuitem.show.traffic = Verbindungsdaten
-menuitem.check.for.updates = Ist eine neuere &Version verfügbar?
-menuitem.help = &Hilfe
-menuitem.preferences = Einstellungen
-menuitem.about = Über
-menuitem.online.help = Online-Hilfe
-menuitem.open = Öffnen
-menuitem.open.with = Öffnen mit...
-menuitem.hide = Minimieren
-menuitem.status = Status
-menuitem.view.downloads = Downloads anzeigen
-menuitem.save = Speichern
-menuitem.add = Hinzufügen
-menuitem.add.contact = Kontakt hinzufügen
-menuitem.add.contact.group = Kontaktgruppe hinzufügen
-menuitem.remove.from.group = Aus dieser Gruppe entfernen
-menuitem.start.a.chat = Chat starten
-menuitem.rename = Umbenennen
-menuitem.delete = Löschen
-menuitem.edit = Ändern
-menuitem.remove.from.roster = Von Kontaktliste entfernen
-menuitem.view.profile = Profil anzeigen
-menuitem.subscribe.to = Kontaktanfrage senden
-menuitem.send.a.message = Nachricht senden...
-menuitem.show.empty.groups = Leere Gruppen anzeigen
-menuitem.send.a.file = Datei senden
-menuitem.view.last.activity = Letzte Aktivität sehen
-menuitem.unban = Teilnehmer entsperren
-menuitem.ban = Verbannen
-menuitem.browse.service = Services anzeigen
-menuitem.remove.service = Service entfernen
-menuitem.join.room = Raum beitreten
-menuitem.remove.bookmark = Lesezeichen entfernen
-menuitem.join.on.startup = Beim Starten beitreten
-menuitem.view.room.info = Rauminformationen anzeigen
-menuitem.view.logs = Logs anzeigen
-menuitem.remove = Entfernen
-menuitem.change.nickname = Angezeigten Namen ändern
-menuitem.block.user = Teilnehmer blockieren
-menuitem.unblock.user = Blockierung auf aktueller Liste aufheben
-menuitem.block.contact = Kontakt auf akueller Liste blockieren
-menuitem.unblock.contact = Blockierung eines Kontaktes aufheben
-menuitem.kick.user = Teilnehmer rauswerfen
-menuitem.voice = Schreibrecht
-menuitem.revoke.voice = Schreibrecht entziehen
-menuitem.grant.voice = Schreibrecht geben
-menuitem.ban.user = Teilnehmer sperren
-menuitem.affiliation = Raumassoziierung
-menuitem.grant.moderator = Moderatorenstatus geben
-menuitem.grant.member = Mitgliedsstatus geben
-menuitem.grant.admin = Adminstatus geben
-menuitem.grant.owner = Besitzerstatus geben
-menuitem.revoke.moderator = Moderatorenstatus widerrufen
-menuitem.revoke.member = Mitgliedsstatus widerrufen
-menuitem.revoke.admin = Adminstatus widerrufen
-menuitem.revoke.owner = Besitzerstatus widerrufen
-menuitem.invite.users = Teilnehmer einladen
-menuitem.invite.group.to.conference = Gruppe zu einer Konferenz einladen
-menuitem.start.a.conference = Eine Konferenz starten...
-menuitem.change.subject = Konferenzthema ändern
-menuitem.destroy.room = Raum löschen
-menuitem.set.status.message = Status Nachricht setzen...
-menuitem.edit.status.message = Status Nachrichten ändern...
-menuitem.broadcast.to.group = Rundnachricht an Gruppe
-menuitem.alert.when.online = Benachrichtigen wenn Teilnehmer verfügbar
-menuitem.remove.alert.when.online = Benachrichtigung entfernen
-menuitem.save.as = Speichern als...
-menuitem.view.client.version = Programm Version anzeigen
-menuitem.view.contact.history = Kontaktverlauf anzeigen
-menuitem.show.contact.statusmessage = Statusnachricht anzeigen
-menuitem.edit.my.profile = &Profil ändern...
-menuitem.lookup.profile = &Profil suchen...
-menuitem.add.as.contact = Als Kontakt hinzufügen
-menuitem.chat = Chat
-menuitem.sign.in = Einloggen 
-menuitem.sign.out = Ausloggen
-menuitem.sign.in.at.login = Einloggen während des Anmeldens 
-menuitem.enter.login.information = Anmeldeinformationen eingeben 
-menuitem.delete.login.information = Anmeldeinformationen löschen 
-menuitem.show.offline.group = Offline User gruppieren
-menuitem.move.to = Verschieben nach
-menuitem.copy.to = Kopieren nach
-menuitem.user.guide = Benutzerhandbuch
-menuitem.add.groupchat.myname = Meinen &Namen hervorheben, wenn ihn jemand schreibt
-menuitem.add.groupchat.mytext = Meinen &Text hervorheben, wenn ich etwas schreibe
-menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
-menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den &Raum betritt oder verlässt 
-menuitem.add.groupchat.showrolesinsteadofstatus = Zeige &Chatrecht-Icons anstelle von Statusicons
-menuitem.add.groupchat.auto.accept.invite = &Konferenzeinladungen automatisch aktzeptieren
-menuitem.add.groupchat.random.colors = Zeige Namen mit zufälligen &Farben
-menuitem.show.offline.users = Zeige Offline User
-menuitem.expand.all.groups = Öffne alle Gruppen
-menuitem.collapse.all.groups = Schließe alle Gruppen
-menuitem.always.on.top = Immer im Vordergrund
-menuitem.bookmark.room = Raum als Lesezeichen setzen
-menuitem.refresh = Aktualisieren
-menuitem.create.room = Raum erstellen oder beitreten
-menuitem.chatframe.option = Einstellungen
 status.away = Abwesend
 status.custom.messages = Benutzerdefinierte Nachricht
 status.do.not.disturb = Nicht stören
@@ -979,9 +985,6 @@ tooltip.view.changelog = Änderungen anzeigen
 tooltip.view.readme = ReadMe anzeigen
 tooltip.notifications = Einstellungen der Benachrichtigungen für eingehende Chats.
 tooltip.place.voice.call = VOIP Anruf starten.
-menuitem.dial = Wählen
-menuitem.languages = Sprachen
-menuitem.inivite.again = Nochmals einladen
 message = Nachricht
 message.alert.notify = Warnungsbenachrichtigung
 message.disconnected.shutdown = Deine Verbindung wurde unterbrochen, weil der Server heruntergefahren wurde
