Updating German translation of: menuitem.add.groupchat.showjoinleavemessage menuitem.add.groupchat.auto.accept.invite menuitem.alert.when.online menuitem.connect menuitem.edit.status.message menuitem.set.status.message title.status.message title.set.status.message

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -524,12 +524,12 @@ menuitem.add.contact.group = Kontaktgruppe hinzufügen
 menuitem.add.groupchat.myname = Meinen &Namen hervorheben, wenn ihn jemand schreibt
 menuitem.add.groupchat.mytext = Meinen &Text hervorheben, wenn ich etwas schreibe
 menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
-menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den &Raum betritt oder verlässt 
+menuitem.add.groupchat.showjoinleavemessage = Zeige an, wenn jemand den &Raum betritt oder verlässt 
 menuitem.add.groupchat.showrolesinsteadofstatus = Zeige &Chatrecht-Icons anstelle von Statusicons
-menuitem.add.groupchat.auto.accept.invite = &Konferenzeinladungen automatisch aktzeptieren
+menuitem.add.groupchat.auto.accept.invite = &Konferenzeinladungen automatisch akzeptieren
 menuitem.add.groupchat.random.colors = Zeige Namen mit zufälligen &Farben
 menuitem.always.on.top = Immer im Vordergrund
-menuitem.alert.when.online = Benachrichtigen wenn Teilnehmer verfügbar
+menuitem.alert.when.online = Benachrichtigen, wenn Teilnehmer verfügbar
 menuitem.ban = Verbannen
 menuitem.ban.user = Teilnehmer sperren
 menuitem.block.user = Teilnehmer blockieren
@@ -539,7 +539,7 @@ menuitem.change.nickname = Angezeigten Namen ändern
 menuitem.change.subject = Konferenzthema ändern
 menuitem.chat = Chat
 menuitem.check.for.updates = Ist eine neuere &Version verfügbar?
-menuitem.connect = File
+menuitem.connect = Datei
 menuitem.contacts = Kontakte
 menuitem.copy.to = Kopieren nach
 menuitem.delete = Löschen
@@ -548,7 +548,7 @@ menuitem.destroy.room = Raum löschen
 menuitem.dial = Wählen
 menuitem.edit = Ändern
 menuitem.edit.my.profile = &Profil ändern...
-menuitem.edit.status.message = Status Nachrichten ändern...
+menuitem.edit.status.message = Statusnachrichten ändern...
 menuitem.enter.login.information = Anmeldeinformationen eingeben
 menuitem.exit = Beenden
 menuitem.affiliation = Raumassoziierung
@@ -592,7 +592,7 @@ menuitem.save = Speichern
 menuitem.save.as = Speichern als...
 menuitem.send.a.file = Datei senden
 menuitem.send.a.message = Nachricht senden...
-menuitem.set.status.message = Status Nachricht setzen...
+menuitem.set.status.message = Statusnachricht setzen...
 menuitem.show.empty.groups = Leere Gruppen anzeigen
 menuitem.show.offline.group = Offline User gruppieren
 menuitem.show.traffic = Verbindungsdaten
@@ -854,7 +854,7 @@ title.advanced.connection.sso.noprincipal = Spark kann den Klienten für Single S
 title.preferences = Einstellungen
 title.error = Fehler
 title.client.logs = Client Logs
-title.status.message = Status Nachricht
+title.status.message = Statusnachricht
 title.spark.preferences = Spark Einstellungen
 title.alert = Benachrichtigung
 title.tray.information = Tray Information
@@ -890,7 +890,7 @@ title.change.subject = Konferenzthema ändern
 title.enter.reason = Geben Sie einen Grund ein
 title.room.destroyed = Raum löschen
 title.edit.custom.message = Eigene Nachrichten ändern
-title.set.status.message = Status Nachricht setzen
+title.set.status.message = Statusnachricht setzen
 title.broadcast.message = Rundnachricht
 title.start.chat = Chat starten
 title.view.bookmarks = Lesezeichen anzeigen
