Update Italian translation

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -97,7 +97,7 @@
 ## 2.5.2
 ##     Added key: 'tooltip.place.voice.call'
 ##     Added key: 'message.buzz.alert.notification'
-##     Added kye: 'message.buzz.sent'
+##     Added key: 'message.buzz.sent'
 ##
 ## 2.5.2
 ##     Added key: 'menuitem.user.guide'
@@ -220,11 +220,12 @@ no = No
 not.registered = Non Registrato
 occupants = Presenti
 offline = Offline
-ok = Ok
 online = Online
+ok = Ok
 open = Apri
 open.folder = Apri Cartella
 participants = Partecipanti
+refresh = Aggiorna
 reject = Rifiuta
 retry = Riprova
 room.name = Nome Stanza
@@ -270,12 +271,14 @@ button.dial.number = &Numero di Telefono
 button.find = &Trova
 button.join = &Entra
 button.join.room = &Entra nella Stanza Selezionata
+button.login = &Login
 button.new = &Nuovo
 button.profile = &Profilo
 button.quit = &Esci
 button.reconnect = &Riconnetti
 button.reconnect2 = Riconnetti
 button.refresh = &Aggiorna
+button.reject = Rifiuta
 button.register = &Registrati
 button.remove.bookmark = Elimina Preferito
 button.roster = &Elenco
