localization and bugfix

--- a/src/plugins/roar/src/resources/i18n/roar_i18n.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n.properties
@@ -8,7 +8,21 @@ roar.amount = Maximum popups on screen (0 = infinite):
 roar.location = Change popup starting location (requires restart)
 roar.display.topright = Top Right
 roar.display.bottomright = Bottom Right
-roar.background = Backgroundcolor
-roar.header = Headercolor
-roar.text = Textcolor
+roar.background = Background color
+roar.background.group = Background color multi-user
+roar.background.keyword = Background color keyword
+roar.header = Header color
+roar.header.group = Header color multi-user
+roar.header.keyword = Header color keyword
+roar.text = Text color
+roar.text.group = Text color multi-user
+roar.text.keyword = Text color keyword
 
+roar.single = Single-User
+roar.single.disable = Disable Roar for single-user chats
+roar.group = Mutli-User
+roar.group.different = Use different settings for multi-user chats
+roar.group.disable = Disable Roar for multi-user chats
+roar.keyword = Keyword Matching
+roar.keyword.different = Use different settings for keyword matching
+roar.keyword.keyword = Keywords (comma separated)
