--- a/src/plugins/roar/src/resources/i18n/roar_i18n_de.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_de.properties
@@ -9,6 +9,20 @@ roar.location = Popupecke auswählen (benötigt Neustart)
 roar.display.topright = oben rechts
 roar.display.bottomright = unten rechts
 roar.background = Hintergrundfarbe
+roar.background.group = Hintergrundfarbe Gruppenchat
+roar.background.keyword = Hintergrundfarbe Stichwort
 roar.header = Überschrift
+roar.header.group = Überschrift Gruppenchat
+roar.header.keyword = Überschrift Stichwort
 roar.text = Textfarbe
+roar.text.group = Textfarbe Gruppenchat
+roar.text.keyword = Textfarbe Stichwort
 
+roar.single = Einzelchat
+roar.single.disable = Roar für Einzelchats deaktivieren
+roar.group = Gruppenchat
+roar.group.different = Andere Einstellungen für Gruppenchats verwenden
+roar.group.disable = Roar für Gruppenchats deaktivieren
+roar.keyword = Stichwortsuche
+roar.keyword.different = Andere Einstellungen für Stichwortsuche verwenden
+roar.keyword.keyword = Stichworte (kommagetrennt)
