- fixed typo - added OS-Notifications - refactored code - added info-text for notifications

--- a/src/plugins/roar/src/resources/i18n/roar_i18n.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n.properties
@@ -20,9 +20,17 @@ roar.text.keyword = Text color keyword
 
 roar.single = Single-User
 roar.single.disable = Disable Roar for single-user chats
-roar.group = Mutli-User
+roar.group = Multi-User
 roar.group.different = Use different settings for multi-user chats
 roar.group.disable = Disable Roar for multi-user chats
 roar.keyword = Keyword Matching
 roar.keyword.different = Use different settings for keyword matching
 roar.keyword.keyword = Keywords (comma separated)
+
+roar.display.system = Operating System Notification
+
+roar.warning.topright = Custom Roar notification style. Fully customizable.
+roar.warning.bottomright = Custom Roar notification style. Fully customizable.
+roar.warning.toaster = Spark notification style. Colors are <u>not</u> customizable.
+roar.warning.system = System-dependent notification. Colors are <u>not</u> customizable.
+roar.warning.system.mac = Uses the Notification-Center. Colors are <u>not</u> customizable.<br>See Mac-Systemsettings -&gt; Notifications for more settings.
