--- a/src/plugins/roar/src/resources/i18n/roar_i18n_de.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_de.properties
@@ -26,3 +26,11 @@ roar.group.disable = Roar für Gruppenchats deaktivieren
 roar.keyword = Stichwortsuche
 roar.keyword.different = Andere Einstellungen für Stichwortsuche verwenden
 roar.keyword.keyword = Stichworte (kommagetrennt)
+
+roar.display.system = Betriebssystem-Mitteilung
+
+roar.warning.topright = Roar-spezifische Popups. Flexibel anpassbar.
+roar.warning.bottomright = Roar-spezifische Popups. Flexibel anpassbar.
+roar.warning.toaster = Spark Toaster Popups. Farben sind <u>nicht</u> anpassbar.
+roar.warning.system = Betriebssystemabhängige Popups. Farben sind <u>nicht</u> anpassbar.
+roar.warning.system.mac = Benutzt das Mitteilungs-Center. Farben sind <u>nicht</u> anpassbar.<br>Weitere Einstellungen unter: Mac-Systemeinstellungen -&gt; Mitteilungen.
