--- a/src/plugins/roar/src/resources/i18n/roar_i18n.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n.properties
@@ -33,4 +33,4 @@ roar.warning.topright = Custom Roar notification style. Fully customizable.
 roar.warning.bottomright = Custom Roar notification style. Fully customizable.
 roar.warning.toaster = Spark notification style. Colors are <u>not</u> customizable.
 roar.warning.system = System-dependent notification. Colors and duration are <u>not</u> customizable.
-roar.warning.system.mac = Uses the Notification-Center (OSX 10.8 and above). Colors and duration are <u>not</u> customizable.<br>See Mac-Systemsettings -&gt; Notifications for more settings.
+roar.warning.system.mac = Uses the Notification-Center (OSX 10.8 and above).<br>Colors and duration are <u>not</u> customizable.<br>See Mac-Systemsettings -&gt; Notifications for more settings.
