--- a/src/resources/i18n/spark_i18n_uk_UA.properties
+++ b/src/resources/i18n/spark_i18n_uk_UA.properties
@@ -1,4 +1,3 @@
-##
 ## Spark Resource Bundle
 ##
 ## Additional locales can be specified by creating a new resource file in this
@@ -540,7 +539,7 @@ menuitem.change.subject = \u0417\u043C\u0456\u043D\u0438\u0442\u0438 \u0442\u043
 menuitem.chat = \u0411\u0430\u043B\u0430\u0447\u043A\u0438
 menuitem.check.for.updates = \u041F\u0435\u0440\u0435\u0432\u0456\u0440\u0438\u0442\u0438 &\u043E\u043D\u043E\u0432\u043B\u0435\u043D\u043D\u044F
 menuitem.connect = \u0424\u0430\u0439\u043B
-menuitem.contacts = \u041A\u043D\u0442\u0430\u043A\u0442\u0438
+menuitem.contacts = \u041A\u1086\u043D\u0442\u0430\u043A\u0442\u0438
 menuitem.copy.to = \u0421\u043A\u043E\u043F\u0456\u044E\u0432\u0430\u0442\u0438
 menuitem.delete = \u0412\u0438\u043B\u0443\u0447\u0438\u0442\u0438
 menuitem.delete.login.information = \u0412\u0438\u043B\u0443\u0447\u0438\u0442\u0438 \u0440\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u0439\u043D\u0443 \u0456\u043D\u0444\u0443
