--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -379,6 +379,7 @@ checkbox.transport.tab.setting = Show available transports in tab (requires rest
 checkbox.conference.tab.setting = Show conference service in tab (requires restart)
 checkbox.use.hostname.as.resource = Use hostname as resource
 checkbox.use.version.as.resource = Use Spark version as resource
+checkbox.accept.all.certificates = Accept all certificates
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
