--- a/src/plugins/roar/src/resources/i18n/roar_i18n_lt.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_lt.properties
@@ -9,5 +9,28 @@ roar.location = Pakeisti lang\u0173 atsiradymo prad\u017eios viet\u0105 (reikali
 roar.display.topright = Vir\u0161uje de\u0161in\u0117je
 roar.display.bottomright = Apa\u010dioje de\u0161in\u0117je
 roar.background = Fono spalva
+roar.background.group = Fono spalva grupiniam pokalbiui
+roar.background.keyword = Fono spalva raktiniam \u017Eod\u017Eiui
 roar.header = Antra\u0161t\u0117s spalva
+roar.header.group = Antra\u0161t\u0117s spalva grupiniam pokalbiui
+roar.header.keyword = Antra\u0161t\u0117s spalva raktiniam \u017Eod\u017Eiui
 roar.text = Teksto spalva
+roar.text.group = Teksto spalva grupiniam pokalbiui
+roar.text.keyword = Teksto spalva raktiniam \u017Eod\u017Eiui
+
+roar.single = Paprastas pokalbis
+roar.single.disable = I\u0161jungti Roar paprastuose pokalbiuose (su vienu adresatu)
+roar.group = Grupinis pokalbis
+roar.group.different = Naudoti skirtingus nustatymus grupiniuose pokalbiuose
+roar.group.disable = i\u0161jungti Roar grupiniuose pokalbiuose
+roar.keyword = Raktinis \u017Eodis
+roar.keyword.different = Naudoti skirtingus nustatymus raktiniam \u017Eod\u017Eiui
+roar.keyword.keyword = Raktiniai \u017Ed\u017Eiai (atskirti kalbleliu)
+
+roar.display.system = Operacin\u0117s sistemos prane\u0161imas
+
+roar.warning.topright = Roar prane\u0161imo stilius. Viskas koreguojama.
+roar.warning.bottomright = Roar prane\u0161imo stilius. Viskas koreguojama.
+roar.warning.toaster = Spark prane\u0161imo stilius. Spalv\u0173 <u>negalima</u> pakeisti.
+roar.warning.system = Sisteminis prane\u0161imo stilius. Spalv\u0173 ir rodymo trukm\u0117s <u>negalima</u> pakeisti.
+roar.warning.system.mac = Naudojamas Notification-Center (OSX 10.8 ir naujesn\u0117s).<br>Spalv\u0173 ir rodymo trukm\u0117s <u>negalima</u> pakeisti.<br>Papildom\u0173 nustatym\u0173 ie\u0161koti Mac-Systemsettings -&gt; Notifications.
