SPARK-1746 fix a typo

--- a/src/plugins/roar/src/resources/i18n/roar_i18n_lt.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_lt.properties
@@ -25,7 +25,7 @@ roar.group.different = Naudoti skirtingus nustatymus grupiniuose pokalbiuose
 roar.group.disable = i\u0161jungti Roar grupiniuose pokalbiuose
 roar.keyword = Raktinis \u017Eodis
 roar.keyword.different = Naudoti skirtingus nustatymus raktiniam \u017Eod\u017Eiui
-roar.keyword.keyword = Raktiniai \u017Ed\u017Eiai (atskirti kalbleliu)
+roar.keyword.keyword = Raktiniai \u017Eod\u017Eiai (atskirti kalbleliu)
 
 roar.display.system = Operacin\u0117s sistemos prane\u0161imas
 
