Updated Italian translation

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -205,7 +205,9 @@
 accept = Accetta
 active = Attiva
 add = Aggiungi
+administrator = Amministratore
 answer = Rispondi
+apply= Applica
 available = Disponibile
 broadcast = Messaggio a Tutti
 cancel = Annulla
@@ -225,11 +227,11 @@ ok = Ok
 open = Apri
 open.folder = Apri Cartella
 participants = Partecipanti
-refresh = Aggiorna
 reject = Rifiuta
 retry = Riprova
 room.name = Nome Stanza
 save = Salva
+refresh = Aggiorna
 subject = Argomento
 unfiled = Altri
 use.default = Usa Predefinito
@@ -275,6 +277,7 @@ button.login = &Login
 button.new = &Nuovo
 button.profile = &Profilo
 button.quit = &Esci
+button.re.detect = &Rileva
 button.reconnect = &Riconnetti
 button.reconnect2 = Riconnetti
 button.refresh = &Aggiorna
@@ -290,6 +293,7 @@ button.send.email = Email
 button.start.chat = Chat
 button.tasks.active = Attivi
 button.tasks.all = Tutti
+button.unset.file.explorer = Disabilita File Browser
 button.update = &Aggiorna
 button.view.notes = Mostra note
 button.view.profile = Visualizza profilo completo
@@ -339,6 +343,8 @@ group.notification.options = Opzioni di Notifica
 group.offline = Utenti Offline
 group.search.form = Cerca in
 group.search.results = Risultati della ricerca
+group.chat.name.notification = Visto il tuo nome...
+group.chat.name.match = Il tuo nome è stato citato in una chat:
 
 label.accounts = &Accounts
 label.add.conference.service = &Aggiungi un servizio conferenza
@@ -347,6 +353,7 @@ label.add.task = &Aggiungi impegno
 label.auto.login = &Login Automatico
 label.available.users.in.roster =   &Utenti disponibili in Elenco
 label.cancel = Annulla
+label.cell = Cell
 label.change.password.to = &Cambia Password
 label.chatroom.fontsize = Dimensione font finestra chat:
 label.city = &Localit\u00e0
@@ -377,11 +384,14 @@ label.jabber.id = &Jabber ID
 label.jid = &JID
 label.job.title = &Posizione Lavorativa
 label.last.name = &Cognome
+label.work = Lavoro
 label.local.time = &Ora Locale
+label.message = Messaggio
 label.message.style = &Stile Messaggi
 label.middle.name = &Secondo Nome
 label.minutes.before.stale.chat = &Minuti di inattivit\u00e0 massima per la stanza
 label.mobile = &Cellulare
+label.na = n/a
 label.name = &Nome
 label.network = Ret&e
 label.new.nickname = Nuovo Nickname
@@ -392,6 +402,7 @@ label.old.ssl = &Usa vecchio metodo su porta SSL
 label.os = &Sistema Operativo
 label.pager = &Cercapersone
 label.password = &Password
+label.passwordreset = Reset Password
 label.phone = &Telefono
 label.port = &Porta
 label.postal.code = &CAP
