Updated italian translation

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -200,7 +200,27 @@
 ##     Added key: 'label.contactlist.avatarsize'
 ##
 ## 2.6.0 beta 1
-##     Removed key status.available
+##     Added key: 'menuitem.block.contact'
+##     Added key: 'menuitem.unblock.contact'
+##     Removed key: 'status.available'
+##     Added key: 'message.nickname.not.acceptable'
+##     Added key: 'button.login'
+##     Added key: 'administrator'
+##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
+## 	   Added key: 'checkbox.click.single.tray'
+## 2.7.0 beta 1
+##	   Added key: 'message.search.period.month.one'
+##	   Added key: 'message.search.period.year.one'
+##	   Added key: 'message.search.period.none'
+## 	   Added key: 'message.search.page.timeperiod'
+## 	   Added key: 'message.search.page.counter'
+## 	   Added key: 'message.search.page.right'
+## 	   Added key: 'message.search.page.left'
+##    Added key: 'checkbox.sort.asc.history'
+##	   Added key: 'message.file.transfer.dirnull'
+##     Added key: 'message.file.transfer.nodir'
+##     Added key: 'message.file.transfer.cantwritedir'
+##     Added key: 'message.file.transfer.direrror.setdir'
 
 accept = Accetta
 active = Attiva
@@ -238,7 +258,7 @@ use.default = Usa Predefinito
 user.has.signed.in = \u00e8 entrato.
 user.has.signed.off = \u00e8 uscito.
 while.offline = Quando disconnesso
-yes = Si
+yes = Sì
 
 action.clear = Pulisci
 action.copy = Copia
@@ -302,12 +322,23 @@ button.view.tasklist = Mostra lista impegni
 checkbox.allow.buzz = Abilita gli utenti ad attira&re la tua attenzione.
 checkbox.auto.discover.port = &Rileva Automaticamente host e porta
 checkbox.auto.login = &Login Automatico
+checkbox.click.single.tray = &Usa singolo click nella tray bar per portare spark in primo piano
+checkbox.disable.asterisk.toaster = Disabilita popup a comparsa
 checkbox.disable.chat.history = &Disattiva la Cronologia nella Chat
+checkbox.disable.prev.chat.history = Non &mostrare più le precedenti conversazioni della chat
 checkbox.enable.emoticons = Attiva Em&oticons
+checkbox.graying.out = Nascondi i contatti in pausa (richiede riavvio)
 checkbox.idle.enabled = &Rileva Inattivit\u00e0
 checkbox.launch.on.startup = &Esegui all'avvio
+checkbox.login.as.invisible = L&ogin invisibile
+checkbox.reconnet.info = Specifica la schermata di riconnessione:
+checkbox.reconnect.panel.big = Mostra come pannello
+checkbox.reconnect.panel.small = Mostra nel gruppo dei contatti
+checkbox.reconnect.panel.icon = Mostra come icona
 checkbox.notify.user.comes.online = Notifica quando un utente si connette.
 checkbox.notify.user.goes.offline = Notifica quando un utente si disconnette.
+checkbox.notify.typing.systemtray = &Mostra notifica di scrittura nella tray di sistema
+checkbox.notify.systemtray = Mostra nuovi &messaggi nella try di sistema
 checkbox.permanent = La Stanza \u00e8 &permanente
 checkbox.play.sound.on.invitation = Esegui file audio alla &ricezione di un invito
 checkbox.play.sound.on.new.message = Esegui file audio quando arriva un nuovo &messaggio
@@ -319,13 +350,24 @@ checkbox.show.avatars.in.contact.list = Mostra gli &avatars nella lista contatti
 checkbox.show.notifications.in.conference = &Mostra notifiche nelle Stanze
 checkbox.show.time.in.chat.window = &Mostra Orario nella Finestra di Chat
 checkbox.show.toaster = Mostra &Popup a Comparsa
+checkbox.sort.asc.history = Ordina messaggi per data crescente nella storia contatti
 checkbox.split.chat.window = Dividi le &Finestre di chat (Richiede il riavvio di Spark)
 checkbox.start.in.tray = &Avvia Spark nella Tray Bar
 checkbox.tabs.on.top = Schede della &Chat appaiono in alto (Richiede il riavvio di Spark)
 checkbox.use.compression = Usa Co&mpressione
+checkbox.use.debugger.on.startup = Avvia debugger all'avvio
 checkbox.use.proxy.server = &Usa Proxy Server
 checkbox.use.system.look.and.feel = Utilizza il Look and &Feel di sistema (Richiede il riavvio di Spark)
 checkbox.window.to.front = &Porta la finestra in primo piano
+checkbox.broadcast.hide.offline.user = Nascondi utenti non in linea
+checkbox.use.krbconf = Usa krb5.conf o krb5.ini
+checkbox.use.krb.dns = Usa DNS
+checkbox.use.specify.below = Specifica sotto
+checkbox.use.pki.authentication = Usa autenticazione PKI
+checkbox.transport.tab.setting = Mostra trasporti disponibili nel tab (Richiede il riavvio di Spark)
+checkbox.conference.tab.setting = Mostra servizio di conferenza nel tab (Richiede il riavvio di Spark)
+checkbox.use.hostname.as.resource = Usa hostname come risorsa
+checkbox.use.version.as.resource = Usa versione di Spark come risorsa
 
 delete.log.permanently = Elimina definitivamente log
 delete.permanently = Eliminare definitivamente?
