SPARK-1754 Update Italian translation (by nicoben)

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -205,7 +205,9 @@
 accept = Accetta
 active = Attiva
 add = Aggiungi
+administrator = Amministratore
 answer = Rispondi
+apply= Applica
 available = Disponibile
 broadcast = Messaggio a Tutti
 cancel = Annulla
@@ -220,11 +222,12 @@ no = No
 not.registered = Non Registrato
 occupants = Presenti
 offline = Offline
-ok = Ok
 online = Online
+ok = Ok
 open = Apri
 open.folder = Apri Cartella
 participants = Partecipanti
+refresh = Aggiorna
 reject = Rifiuta
 retry = Riprova
 room.name = Nome Stanza
@@ -235,7 +238,7 @@ use.default = Usa Predefinito
 user.has.signed.in = \u00e8 entrato.
 user.has.signed.off = \u00e8 uscito.
 while.offline = Quando disconnesso
-yes = Si
+yes = Sì
 
 action.clear = Pulisci
 action.copy = Copia
@@ -270,12 +273,15 @@ button.dial.number = &Numero di Telefono
 button.find = &Trova
 button.join = &Entra
 button.join.room = &Entra nella Stanza Selezionata
+button.login = &Login
 button.new = &Nuovo
 button.profile = &Profilo
 button.quit = &Esci
+button.re.detect = &Rileva
 button.reconnect = &Riconnetti
 button.reconnect2 = Riconnetti
 button.refresh = &Aggiorna
+button.reject = Rifiuta
 button.register = &Registrati
 button.remove.bookmark = Elimina Preferito
 button.roster = &Elenco
@@ -287,6 +293,7 @@ button.send.email = Email
 button.start.chat = Chat
 button.tasks.active = Attivi
 button.tasks.all = Tutti
+button.unset.file.explorer = Disabilita File Browser
 button.update = &Aggiorna
 button.view.notes = Mostra note
 button.view.profile = Visualizza profilo completo
@@ -295,12 +302,23 @@ button.view.tasklist = Mostra lista impegni
 checkbox.allow.buzz = Abilita gli utenti ad attira&re la tua attenzione.
 checkbox.auto.discover.port = &Rileva Automaticamente host e porta
 checkbox.auto.login = &Login Automatico
+checkbox.click.single.tray = &Usa singolo click nella tray bar per portare spark in primo piano
+checkbox.disable.asterisk.toaster = Disabilita popup a comparsa
 checkbox.disable.chat.history = &Disattiva la Cronologia nella Chat
+checkbox.disable.prev.chat.history = Non &mostrare più le precedenti conversazioni della chat
 checkbox.enable.emoticons = Attiva Em&oticons
+checkbox.graying.out = Nascondi i contatti in pausa (richiede riavvio)
 checkbox.idle.enabled = &Rileva Inattivit\u00e0
 checkbox.launch.on.startup = &Esegui all'avvio
+checkbox.login.as.invisible = L&ogin invisibile
+checkbox.reconnet.info = Specifica la schermata di riconnessione:
+checkbox.reconnect.panel.big = Mostra come pannello
+checkbox.reconnect.panel.small = Mostra nel gruppo dei contatti
+checkbox.reconnect.panel.icon = Mostra come icona
 checkbox.notify.user.comes.online = Notifica quando un utente si connette.
 checkbox.notify.user.goes.offline = Notifica quando un utente si disconnette.
+checkbox.notify.typing.systemtray = &Mostra notifica di scrittura nella tray di sistema
+checkbox.notify.systemtray = Mostra nuovi &messaggi nella try di sistema
 checkbox.permanent = La Stanza \u00e8 &permanente
 checkbox.play.sound.on.invitation = Esegui file audio alla &ricezione di un invito
 checkbox.play.sound.on.new.message = Esegui file audio quando arriva un nuovo &messaggio
@@ -312,13 +330,24 @@ checkbox.show.avatars.in.contact.list = Mostra gli &avatars nella lista contatti
 checkbox.show.notifications.in.conference = &Mostra notifiche nelle Stanze
 checkbox.show.time.in.chat.window = &Mostra Orario nella Finestra di Chat
 checkbox.show.toaster = Mostra &Popup a Comparsa
+checkbox.sort.asc.history = Ordina messaggi per data crescente nella storia contatti
 checkbox.split.chat.window = Dividi le &Finestre di chat (Richiede il riavvio di Spark)
 checkbox.start.in.tray = &Avvia Spark nella Tray Bar
 checkbox.tabs.on.top = Schede della &Chat appaiono in alto (Richiede il riavvio di Spark)
 checkbox.use.compression = Usa Co&mpressione
+checkbox.use.debugger.on.startup = Avvia debugger all'avvio
 checkbox.use.proxy.server = &Usa Proxy Server
 checkbox.use.system.look.and.feel = Utilizza il Look and &Feel di sistema (Richiede il riavvio di Spark)
 checkbox.window.to.front = &Porta la finestra in primo piano
+checkbox.broadcast.hide.offline.user = Nascondi utenti non in linea
+checkbox.use.krbconf = Usa krb5.conf o krb5.ini
+checkbox.use.krb.dns = Usa DNS
+checkbox.use.specify.below = Specifica sotto
+checkbox.use.pki.authentication = Usa autenticazione PKI
+checkbox.transport.tab.setting = Mostra trasporti disponibili nel tab (Richiede il riavvio di Spark)
+checkbox.conference.tab.setting = Mostra servizio di conferenza nel tab (Richiede il riavvio di Spark)
+checkbox.use.hostname.as.resource = Usa hostname come risorsa
+checkbox.use.version.as.resource = Usa versione di Spark come risorsa
 
 delete.log.permanently = Elimina definitivamente log
 delete.permanently = Eliminare definitivamente?
@@ -336,6 +365,8 @@ group.notification.options = Opzioni di Notifica
 group.offline = Utenti Offline
 group.search.form = Cerca in
 group.search.results = Risultati della ricerca
+group.chat.name.notification = Visto il tuo nome...
+group.chat.name.match = Il tuo nome è stato citato in una chat:
 
 label.accounts = &Accounts
 label.add.conference.service = &Aggiungi un servizio conferenza
@@ -344,6 +375,7 @@ label.add.task = &Aggiungi impegno
 label.auto.login = &Login Automatico
 label.available.users.in.roster =   &Utenti disponibili in Elenco
 label.cancel = Annulla
+label.cell = Cell
 label.change.password.to = &Cambia Password
 label.chatroom.fontsize = Dimensione font finestra chat:
 label.city = &Localit\u00e0
@@ -375,10 +407,12 @@ label.jid = &JID
 label.job.title = &Posizione Lavorativa
 label.last.name = &Cognome
 label.local.time = &Ora Locale
+label.message = Messaggio
 label.message.style = &Stile Messaggi
 label.middle.name = &Secondo Nome
 label.minutes.before.stale.chat = &Minuti di inattivit\u00e0 massima per la stanza
 label.mobile = &Cellulare
+label.na = n/a
 label.name = &Nome
 label.network = Ret&e
 label.new.nickname = Nuovo Nickname
@@ -389,6 +423,7 @@ label.old.ssl = &Usa vecchio metodo su porta SSL
 label.os = &Sistema Operativo
 label.pager = &Cercapersone
 label.password = &Password
+label.passwordreset = Reset Password
 label.phone = &Telefono
 label.port = &Porta
 label.postal.code = &CAP
@@ -420,6 +455,7 @@ label.user.on.public.network = L'utente \u00e8 in una rete pubblica
 label.username = &Nome Utente
 label.version = &Versione
 label.web.page = &Home Page
+label.work = Lavoro
 label.xmpp.port = Porta &XMPP
 
 menuitem.about = Versione
